--- a/.docker/postgres/Dockerfile
+++ b/.docker/postgres/Dockerfile
@@ -6,3 +6,4 @@ RUN localedef -i pt_BR -c -f UTF-8 -A /usr/share/locale/locale.alias pt_BR.UTF-8
 ENV LANG pt_BR.utf8
 ENV LC_ALL pt_BR.utf8
 ENV LANGUAGE pt_BR.utf8
+ENV TZ=America/Sao_Paulo
