--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,41 @@
 services:
-  api-template: # TODO: Change this to your project name
-    container_name: api-template # TODO: Change this to your project name
+  api-usuario:
+    container_name: api-usuario
+    depends_on:
+      - db-usuario
     build:
       context: .docker/node/
       dockerfile: Dockerfile
     entrypoint: .docker/node/entrypoint.sh
     ports:
-      - "3000:3000" # TODO: Change this to your project port
-      - "7000:7000" # TODO: Change this to your project debug port
+      - '3001:3001'
+      - '7001:7001'
+      - '9001:9001'
     volumes:
       - .:/home/node/app
+    restart: unless-stopped
+    networks:
+      - codelab-net
 
-  db-template: # TODO Change this to your project db name
-    container_name: db-template # TODO Change this to your project db name
+  db-usuario:
+    container_name: db-usuario
     build:
       context: .docker/postgres/
       dockerfile: Dockerfile
-    command: postgres -c log_statement=all # TODO add -p NNNN to chage db port
+    command: postgres -c log_statement=all -p 5001
     volumes:
       - ./.docker/postgres/data:/var/lib/postgresql/data
+    restart: unless-stopped
     environment:
-      POSTGRES_DB: template # TODO Change this to your db name
+      POSTGRES_DB: api-usuario
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "5432:5432" # TODO Change this to your db port
+      - '5001:5001'
+    networks:
+      - codelab-net
+
+networks:
+  codelab-net:
+    name: codelab-net
+    external: true
