--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "codelabapi-template",
+  "name": "codelabapi-usuario",
   "version": "0.0.1",
-  "description": "",
+  "description": "api do usuario",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch --preserveWatchOutput",
-    "start:debug": "nest start --debug 0.0.0.0:7000 --watch --preserveWatchOutput", //TODO change debug port
+    "start:debug": "nest start --debug 0.0.0.0:7001 --watch --preserveWatchOutput",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
