--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,10 +9,13 @@
       "request": "attach",
       "restart": true,
       "name": "Debug API",
-      "port": 7000, //TODO change debug port
+      "port": 7001,
       "address": "0.0.0.0",
       "localRoot": "${workspaceFolder}/",
-      "skipFiles": ["<node_internals>/**", "node_modules/**"],
+      "skipFiles": [
+        "<node_internals>/**",
+        "node_modules/**"
+      ],
       "sourceMapPathOverrides": {
         "/home/node/app/*": "${workspaceRoot}/*"
       },
