--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "codelabapi-usuario",
   "version": "0.0.1",
-  "description": "api do usuario",
-  "author": "",
+  "description": "CODELab api do usuario",
+  "author": "eagoracabelo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eagorafelipe/CodeLabAPIUsuario"
+  },
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -18,7 +22,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:e2e:cov": "jest --config ./test/jest-e2e.json --coverage"
+    "test:e2e:cov": "jest --config ./test/jest-e2e.json --coverage",
+    "seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-seeding/dist/cli.js seed -n src/config/seeds/ormconfig-seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -36,6 +41,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -56,6 +62,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "typeorm-seeding": "^1.6.1",
     "typescript": "^5.1.3"
   },
   "jest": {
