--- a/package.json
+++ b/package.json
@@ -82,8 +82,14 @@
     "coverageDirectory": "../coverage/unit",
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
-      "main.ts",
-      ".module.ts"
+      "main.ts$",
+      "ormconfig-seed.ts$",
+      ".module.ts$",
+      ".spec.ts$",
+      ".dto.ts$",
+      ".entity.ts$",
+      ".seed.ts$",
+      ".factory.ts$"
     ]
   }
 }
