--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+#postgresql
 DB_HOST=db-usuario
 DB_PORT=5001
 DB_USERNAME=postgres
@@ -5,12 +6,24 @@ DB_PASSWORD=postgres
 DB_DATABASE=api-usuario
 DB_LOGGING=false
 
+#rabbitmq
 RMQ_HOST=rabbitmq
 RMQ_USER=codelab
 RMQ_PASSWORD=c0D3&l4b
 RMQ_PORT=5672
+
+#misc
 BASE_URL_FRONT=http://localhost:4200/
 
+#grpc
 # GRPC_TRACE=all
 # GRPC_VERBOSITY=DEBUG
 GRPC_USUARIO=0.0.0.0:9001
+
+#kong-fateway
+KONG_URL=http://kong:8001
+KONG_CONSUMER=login_server_issuer
+
+#jwt
+JWT_TOKEN_SECRET=kpmzRFHJFfq0EpDZswBl4MdDn6F62LwD
+JWT_TOKEN_EXPRIRES_IN=12h
