--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: setup up docker container
-        uses: docker/setu-buildx-action@v2
+        uses: docker/setup-buildx-action@v2
 
       - name: build and run docker container
-        run: dcoker-compose -d docker-compose-test.yml up -d --build
+        run: docker-compose -d docker-compose-test.yml up -d --build
 
       - name: wait for postgresql to be ready
         run: |
