--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,26 +9,29 @@ jobs:
 
     steps:
       - name: checkout repository
-        uses: actions/checkout@v3
-
-      - name: setup up docker container
-        uses: docker/setup-buildx-action@v2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: build and run docker container
-        run: docker-compose -d docker-compose-test.yml up -d --build
+        run: |
+          docker compose -d docker-compose-test.yml up -d --build
 
       - name: wait for postgresql to be ready
         run: |
-          until docker-compose exec db-usuario-test pg_isready -U postgres -p 5001; do
+          until docker compose exec db-usuario-test pg_isready -U postgres -p 5001; do
             sleep 5;
           done
 
       - name: run tests coverage
-        run: docker-compose exec api-usuario-test npm run test:cov
+        run: |
+          docker compose exec api-usuario-test npm run test:cov
 
       - name: run tests e2e coverage
-        run: docker-compose exec api-usuario-test npm run test:e2e:cov
+        run: |
+          docker compose exec api-usuario-test npm run test:e2e:cov
 
       - name: stop docker container
         if: always()
-        run: docker-compose down
+        run: |
+          docker compose down
