--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: build and run docker container
         run: |
-          docker compose -d docker-compose-test.yml up -d --build
+          docker compose -f docker-compose-test.yml up -d --build
 
       - name: wait for postgresql to be ready
         run: |
